--- a/app/src/main/res/layout/drug_info_card.xml
+++ b/app/src/main/res/layout/drug_info_card.xml
@@ -8,6 +8,7 @@
         android:id="@+id/cardBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="80dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
@@ -24,8 +25,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="TextView"
+            android:text="Text"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:textColor="@color/white"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textSize="16sp"/>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
