--- a/app/src/main/res/layout/activity_drug_info.xml
+++ b/app/src/main/res/layout/activity_drug_info.xml
@@ -81,7 +81,7 @@
 
         <SearchView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_margin="5dp" />
     </androidx.cardview.widget.CardView>
 
