feat: add search functionality (with bugs)

--- a/app/src/main/res/layout/activity_drug_info.xml
+++ b/app/src/main/res/layout/activity_drug_info.xml
@@ -80,9 +80,12 @@
 
 
         <SearchView
+            android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_margin="5dp" />
+            android:layout_margin="5dp"
+            android:iconifiedByDefault="false"
+            android:clickable="true" />
     </androidx.cardview.widget.CardView>
 
     <View
